<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="T_SIM_ACTUATOR_CFG" Id="{edbef554-0fe8-4611-8104-3e2beb2a8221}">
    <Declaration><![CDATA[TYPE T_SIM_ACTUATOR_CFG :
STRUCT
	bActiveLowOn:		BOOL := FALSE;
	bActiveLowSwitch:	BOOL := FALSE;

	nDelay:     		UDINT := 1000;	(* Simulated delay for commands [msec] *)
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>